--- a/Mocks/QA_autoQSO.ipynb
+++ b/Mocks/QA_autoQSO.ipynb
@@ -16,6 +16,7 @@
     "    - different nb of healpix pixels in data (1215) and randoms (1214)\n",
     "    - data go down to z = 1.796 when randoms only to z = 1.8\n",
     "    - get the way to send jobs on NERSC\n",
+    "    - run with more randoms\n",
     "    - less redshift bins to compute the correlation\n",
     "    - Get correct errors using https://github.com/igmhub/picca/pull/442"
    ]
