update conclusion of DLA

--- a/Mocks/QA_DLA.ipynb
+++ b/Mocks/QA_DLA.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "To-do for this notebook:\n",
-    "    - look at evolution of 1d stack with redshift and NH1\n",
+    "    - look at evolution of 1d stack with redshift and NHI\n",
     "    - look at the values of beta and bias DLA\n",
     "    - look at their evolution with redshift and with NHI"
    ]
@@ -23,11 +23,12 @@
    "source": [
     "Conclusion:\n",
     "    - create the catalog and apply the survey\n",
-    "    - bias of DLA is too low\n",
     "    - distribution NHI very different. Is it only an efficiency issue?\n",
     "    - mean NHI different\n",
     "    - Why is the distribution of Lambda_RF not flat at low lRF?\n",
-    "    - Are there RSD in zDLA?"
+    "    - bias of DLA is too low\n",
+    "    - Are there RSD in zDLA?\n",
+    "    - look at mocks where quickquasar was run with DLA, i.e. the Damping wing effect"
    ]
   },
   {
