init add 3d auto DLA

--- a/Mocks/QA_DLA.ipynb
+++ b/Mocks/QA_DLA.ipynb
@@ -14,7 +14,9 @@
     "To-do for this notebook:\n",
     "    - look at evolution of 1d stack with redshift and NHI\n",
     "    - look at the values of beta and bias DLA\n",
-    "    - look at their evolution with redshift and with NHI"
+    "    - look at their evolution with redshift and with NHI\n",
+    "    - add DLA randoms\n",
+    "    - compute the 3d auto-correlations of DLAs"
    ]
   },
   {
@@ -33,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,9 +90,11 @@
     "mock['delta_attributes'] = '/project/projectdirs/desi/mocks/lya_forest/picca/london/'+mock['mock_ver']+'/'+mock['quick_ver']+'/iter.fits.gz'\n",
     "mock['delta_log'] = '/project/projectdirs/desi/mocks/lya_forest/picca/london/'+mock['mock_ver']+'/'+mock['quick_ver']+'/input.log'\n",
     "mock['cf1d'] = '/global/homes/h/hdumasde/Run_programs/igmhub/picca/CoLoRe_mocks/cf1d.fits.gz'\n",
-    "mock['xcf1d_DLA'] = '/global/homes/h/hdumasde/Run_programs/igmhub/picca/CoLoRe_mocks/v4.0/Correlations/xcf1d_DLA.fits.gz'\n",
-    "mock['xcf_DLA'] = '/global/homes/h/hdumasde/Run_programs/igmhub/picca/CoLoRe_mocks/v4.0/Correlations/xcf_DLA.fits.gz'\n",
-    "mock['xcf_DLA_fit'] = '/global/homes/h/hdumasde/Run_programs/igmhub/picca/CoLoRe_mocks/v4.0/Correlations/Fit/LYA_DLA__noMetals/result.h5'"
+    "\n",
+    "mock['Correlations'] = '/global/homes/h/hdumasde/Run_programs/igmhub/picca/CoLoRe_mocks/v4.0/Correlations/'\n",
+    "mock['xcf1d_DLA'] = mock['Correlations']+'/xcf1d_DLA.fits.gz'\n",
+    "mock['xcf_DLA'] = mock['Correlations']+'/xcf_DLA.fits.gz'\n",
+    "mock['xcf_DLA_fit'] = mock['Correlations']+'/Fit/LYA_DLA__noMetals/result.h5'"
    ]
   },
   {
@@ -102,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1992,6 +1996,73 @@
     "plt.grid()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Compute the 3D auto-correlation of DLAs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Redshift interval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zint = ['0:10']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Simply run the following command in your terminal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " srun --time 30 --qos debug do_co.py --out /global/homes/h/hdumasde/Run_programs/igmhub/picca/CoLoRe_mocks/v4.0/Correlations//coDLA_z_0_10/coDLA_DD_z_0_10.fits.gz --drq /global/homes/h/hdumasde/Run_programs/igmhub/picca/CoLoRe_mocks/v4.0/Catalog//DLA.fits.gz --z-cut-min 0 --z-cut-max 10 --type-corr DD ;\n"
+     ]
+    }
+   ],
+   "source": [
+    "for zinterval in zint:\n",
+    "    zmin = zinterval.split(':')[0]\n",
+    "    zmax = zinterval.split(':')[1]\n",
+    "\n",
+    "    if not os.path.isdir(mock['Correlations']+'/coDLA_z_{}_{}/'.format(zmin,zmax)):\n",
+    "        os.mkdir(mock['Correlations']+'/coDLA_z_{}_{}/'.format(zmin,zmax))\n",
+    "\n",
+    "    cmd = ' srun --time 30 --qos debug do_co.py'\n",
+    "    cmd += ' --out '+mock['Correlations']+'/coDLA_z_{}_{}/coDLA_DD_z_{}_{}.fits.gz'.format(zmin,zmax,zmin,zmax)\n",
+    "    cmd += ' --drq '+mock['DLA_catalog']\n",
+    "    cmd += ' --z-cut-min '+str(zmin)\n",
+    "    cmd += ' --z-cut-max '+str(zmax)\n",
+    "    cmd += ' --type-corr DD ;'\n",
+    "    print(cmd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
