added base directory variable for outputs (that was hard coded to my home before)

--- a/Mocks/QA_1dPk.ipynb
+++ b/Mocks/QA_1dPk.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,24 +46,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## define the root directory for outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/global/homes/m/mwalther')"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "basedir=Path.home()\n",
+    "basedir"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## set plotting style options"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/global/homes/m/mwalther/.conda/envs/picca_plots/lib/python3.7/site-packages/matplotlib/__init__.py:846: MatplotlibDeprecationWarning: \n",
-      "The text.latex.unicode rcparam was deprecated in Matplotlib 2.2 and will be removed in 3.1.\n",
-      "  \"2.2\", name=key, obj_type=\"rcparam\", addendum=addendum)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rcParams['text.usetex'] = False                      #setting this to true causes problems on NERSC because some files can't be created without sudo-rights\n",
     "rcParams['text.latex.unicode'] = True\n",
@@ -89,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -167,15 +185,15 @@
     "if 'saclay' in mock_base or 'debug' in mock_base:\n",
     "    zcat=Path('{}/{}/zcat.fits'.format(mock_base,quick_ver))\n",
     "    stringid='_'.join(zcat.parts[-4:])[:-5]\n",
-    "    catfile=(Path.home()/'zcat_drq_saclay'/'{}_desi_drq.fits'.format('_'.join(zcat.parts[-4:])[:-5]))\n",
+    "    catfile=(basedir/'zcat_drq_saclay'/'{}_desi_drq.fits'.format('_'.join(zcat.parts[-4:])[:-5]))\n",
     "    if not catfile.parent.exists():\n",
     "        Path.mkdir(catfile.parent,parents=True)\n",
     "    picca.utils.desi_from_ztarget_to_drq(zcat.as_posix(),catfile.as_posix())\n",
-    "    outcatfile=Path.home()/'catalogues_small/'/(stringid+'_reduced_rarange{}_decrange{}.fits'.format(rarange,decrange))\n",
+    "    outcatfile=basedir/'catalogues_small/'/(stringid+'_reduced_rarange{}_decrange{}.fits'.format(rarange,decrange))\n",
     "else:\n",
     "    catfile=Path('{}/{}/zcat_desi_drq.fits'.format(mock_base,quick_ver))\n",
     "    stringid='_'.join(catfile.parts[-4:])[:-5]\n",
-    "    outcatfile=Path.home()/'catalogues_small/'/('_'.join(catfile.parts[-4:])[:-5]+'_reduced_rarange{}_decrange{}.fits'.format(rarange,decrange))\n"
+    "    outcatfile=basedir/'catalogues_small/'/('_'.join(catfile.parts[-4:])[:-5]+'_reduced_rarange{}_decrange{}.fits'.format(rarange,decrange))\n"
    ]
   },
   {
@@ -187,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,12 +221,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "outdir_delta=Path.home()/'res_ascii_{}{}/'.format(stringid,'_subset_rarange{}_decrange{}'.format(rarange,decrange) if usesubset else '')\n",
-    "outdir_Pk=Path.home()/'Pk_fits{}/'.format(stringid,'_subset_rarange{}_decrange{}'.format(rarange,decrange) if usesubset else '')"
+    "outdir_delta=basedir/'res_ascii_{}{}/'.format(stringid,'_subset_rarange{}_decrange{}'.format(rarange,decrange) if usesubset else '')\n",
+    "outdir_Pk=basedir/'Pk_fits{}/'.format(stringid,'_subset_rarange{}_decrange{}'.format(rarange,decrange) if usesubset else '')"
    ]
   },
   {
@@ -220,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +377,7 @@
        "'/global/u1/m/mwalther/igmhub/picca/bin/do_deltas.py --in-dir /global/projecta/projectdirs/desi/mocks/lya_forest/develop/debug/1024-1024-1536/mock_0/output/quick-0.1/spectra-16/ --drq /global/homes/m/mwalther/zcat_drq_saclay/mock_0_output_quick-0.1_zcat_desi_drq.fits --out-dir /global/homes/m/mwalther/res_ascii_mock_0_output_quick-0.1_zcat/ --mode desi --delta-format Pk1D_ascii --rebin 1 --lambda-min 3650. --lambda-max 7200.0 --lambda-rest-min 1050.0 --lambda-rest-max 1180 --nproc 4 --order 0 --use-constant-weight --iter-out-prefix /global/homes/m/mwalther/res_ascii_mock_0_output_quick-0.1_zcat/iter --log /global/homes/m/mwalther/res_ascii_mock_0_output_quick-0.1_zcat/delta.log'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +483,7 @@
        "'/global/u1/m/mwalther/igmhub/picca/bin/do_Pk1D.py --in-dir /global/homes/m/mwalther/res_ascii_mock_0_output_quick-0.1_zcat --in-format ascii --out-dir /global/homes/m/mwalther/Pk_fitsmock_0_output_quick-0.1_zcat --lambda-obs-min 3750. --noise-estimate pipeline --no-apply-filling'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +796,7 @@
     }
    ],
    "source": [
-    "plot_data(Path.home()/'Pk_fits_red')"
+    "plot_data(basedir/'Pk_fits_red')"
    ]
   },
   {
@@ -826,7 +844,7 @@
     }
    ],
    "source": [
-    "plot_data(Path.home()/'Pk_fits')"
+    "plot_data(basedir/'Pk_fits')"
    ]
   },
   {
