--- a/Mocks/QA_1dPk.ipynb
+++ b/Mocks/QA_1dPk.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This notebook is for calling the do_deltas, do_Pk1d for computing the 1D $P_{F} (k)$ and plotting the results for either the full cat or a subset"
+    "# Notebook  for computing the 1D $P_{F,1d} (k)$ and plotting the results for either the full cat or a subset"
    ]
   },
   {
