reverted changes accidentally made to other files

--- a/Mocks/QA_1dPk.ipynb
+++ b/Mocks/QA_1dPk.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook  for computing the 1D $P_{F,1d} (k)$ and plotting the results for either the full cat or a subset"
+    "# Notebook generating picca calls for computing $P_{F,1d} (k)$ and showing QA plots"
    ]
   },
   {
